[package]
name = "predict-rococo-collator"
version = "0.1.0"
authors = ["XPredictMarket"]
description = "A new FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Apache-2.0"
build = "build.rs"
repository = "https://github.com/XPredictMarket/NodePredict"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "predict-rococo-collator"

[dependencies]
derive_more = { version = "0.15.0" }
log = { version = "0.4.13" }
codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = { version = "0.3.8" }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.64"
hex-literal = { version = "0.3.1" }
jsonrpc-core = { version = "15.1.0" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "0.9.0" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "0.9.0", features = ['wasmtime'] }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "0.9.0" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "0.9.0", features = ['wasmtime'] }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "0.9.0" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "0.9.0", features = ['wasmtime'] }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sc-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "0.9.0" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }

cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1" }
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus.git", branch = "rococo-v1" }

polkadot-primitives = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1" }
polkadot-service = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branch = "rococo-v1" }

predict-rococo-runtime = { version = "0.1.0", path = "../runtime" }
proposals-info-rpc = { version = "0.1.0", path = "../pallets/proposals/rpc" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }

[features]
default = []
runtime-benchmarks = [
    "predict-rococo-runtime/runtime-benchmarks",
]
