[package]
authors = ['XPredictMarket']
edition = '2018'
name = 'xpmrl-couple'
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/XPredictMarket/NodePredict"
description = "FRAME pallet template for defining custom runtime logic."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
xpmrl-traits = { version = "0.1.0", default-features = false, path = "../traits" }
xpmrl-utils = { version = "0.1.0", default-features = false, path = "../utils" }
xpmrl-proposals = { version = "0.1.0", default-features = false, path = "../proposals" }

[dev-dependencies]
serde = { version = "1.0.101" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0" }
xpmrl-tokens = { version = "0.1.0", path = "../tokens" }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-std/std',
	'sp-core/std',
	'sp-io/std',
	'sp-runtime/std',
	'num-traits/std',
	'xpmrl-traits/std',
	'xpmrl-utils/std',
	'xpmrl-proposals/std',
]
