[package]
authors = ['XPredictMarket']
edition = '2018'
name = 'xpmrl-tokens'
version = "3.0.0"
license = "Apache-2.0"
repository = "https://github.com/XPredictMarket/NodePredict"
description = "FRAME pallet template for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
xpmrl-traits = { version = "3.0.0", default-features = false, path = "../traits" }

[dev-dependencies]
pallet-balances = { version = "3.0.0" }

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-std/std',
	'sp-core/std',
	'sp-io/std',
	'sp-runtime/std',
]
