[package]
authors = ['XPredictMarket']
edition = '2018'
name = 'xpmrl-traits'
version = "3.0.0"
license = "Apache-2.0"
repository = "https://github.com/XPredictMarket/NodePredict"
description = "FRAME pallet template for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'sp-std/std',
	'sp-runtime/std',
]
